--- a/extensions/iwork/package.json
+++ b/extensions/iwork/package.json
@@ -180,8 +180,8 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.39.3",
-    "run-applescript": "^6.0.0"
+    "@raycast/api": "^1.57.2",
+    "@raycast/utils": "^1.9.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
